bug fixed overflow auto

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,4 +181,8 @@ a {
         width: 90%;
         margin-top: 1.5rem;
     }
+    .header__social-media{
+        display: flex;
+        overflow-x: auto;
+    }
 }
